<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HelpActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:gravity="center_vertical"
        android:text="@string/gr_nit_telebank"
        android:padding="10dp"
        android:textSize="20sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:text="@string/telefon"
            android:padding="10dp"
            android:layout_weight="1"
            android:gravity="center_vertical"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:text="@string/_36_1_510_0527"
            android:padding="10dp"
            android:layout_weight="1"
            android:gravity="center_vertical"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:text="@string/fax"
            android:padding="10dp"
            android:layout_weight="1"
            android:gravity="center_vertical"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:text="@string/_36_1_235_5906"
            android:padding="10dp"
            android:layout_weight="1"
            android:gravity="center_vertical"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:text="@string/postac_m"
            android:padding="10dp"
            android:layout_weight="1"
            android:gravity="center_vertical"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:text="@string/_1439_budapest_pf_649"
            android:padding="10dp"
            android:layout_weight="1"
            android:gravity="center_vertical"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:text="@string/e_mail"
            android:padding="10dp"
            android:layout_weight="1"
            android:gravity="center_vertical"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:text="@string/info_granitbank_hu"
            android:padding="10dp"
            android:layout_weight="1"
            android:gravity="center_vertical"/>
    </LinearLayout>


</LinearLayout>