<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity"
    android:padding="10dp"
    >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:scaleType="fitCenter"
        android:src="@drawable/logo"
        android:layout_margin="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/please_enter_your_credentials"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_gravity="start"
        android:text="@string/username" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:background="@drawable/rounded_transparent_bg"
        android:layout_marginBottom="20dp"
        android:padding="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginBottom="0dp"
        android:text="@string/password"
        android:layout_gravity="start"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="textPassword"
        android:background="@drawable/rounded_transparent_bg"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:padding="10dp"/>

    <com.andexert.library.RippleView
        android:id="@+id/loginBtn"
        rv_centered="true"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_margin="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/login"
            style="@style/RippleStyle" />

    </com.andexert.library.RippleView>


</LinearLayout>