<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/cel" />


    <com.akaita.android.morphview.MorphView
        android:id="@+id/btnEdit"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:padding="10dp"
        app:avdFirst="@drawable/anim_donetoedit"
        app:avdSecond="@drawable/anim_edittodone" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="2">

        <EditText
            android:id="@+id/txtGoalDate"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/nincs_cel_datum"
            android:inputType="none" />

        <EditText
            android:id="@+id/txtGoalBalance"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/nincs_cel_osszeg"
            android:inputType="none" />

    </LinearLayout>

    <TextView
        android:id="@+id/txtMoneyLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:hint="@string/cel_beallitasa"
        android:padding="10dp"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/txtMoneyPerDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:padding="10dp"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/txtDaysLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10dp"
        android:textSize="25sp" />


</LinearLayout>