<?xml version="1.0" encoding="utf-8" ?>
<com.daimajia.swipe.SwipeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:swipe="http://schemas.android.com/apk/res-auto"
    android:id="@+id/swipe"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    swipe:leftEdgeSwipeOffset="0dp"
    swipe:rightEdgeSwipeOffset="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="#FF5534"
        android:gravity="center"
        android:tag="Bottom3"
        android:weightSum="10">

        <ImageView
            android:id="@+id/trash"
            android:layout_width="27dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:src="@drawable/ic_trash" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/torli_a_tetelt"
            android:textColor="#fff"
            android:textSize="17sp" />

        <Button
            android:id="@+id/btnDeleteItem"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="4"
            android:text="@string/igen_t_rl_s"
            android:textColor="#FF5534" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linMainForm"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:weightSum="7"
            >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:gravity="start"
                android:orientation="vertical"
                android:layout_weight="4">


                <TextView
                    android:id="@+id/txtItemName"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:gravity="center_vertical"
                    android:text="@string/itemname"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/txtItemPrice"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:tag="Hover"
                    android:text="@string/itemprice" />



            </LinearLayout>


            <TextView
                android:id="@+id/txtItemDate"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:gravity= "end"
                android:text="@string/date"
                android:layout_weight="2"/>

            <ImageView
                android:layout_height="50dp"
                android:layout_width="0dp"
                android:layout_gravity="end"
                android:scaleType="fitCenter"
                android:padding="10dp"
                android:src="@drawable/ic_leftarrow"
                android:layout_weight="1"
                />

        </LinearLayout>

        <View
            android:layout_marginTop="5dp"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_gravity="bottom"
            android:background="@color/colorTitleLightRed" />
    </LinearLayout>
</com.daimajia.swipe.SwipeLayout>